Modifying error messaging.

--- a/build_number.html
+++ b/build_number.html
@@ -1,6 +1,6 @@
-TravisBuild=212
-Commit=29ab7be6b3879cac7e9067c6cefc93f34b9fd33c
-TravisJob=182899556
-Author=asampatoor <adithya.sampatoor@nih.gov>
-BuildTime=12-10-16-1524
-Docker=matchbox/nci-treatment-arm-processor-api:12-10-16-1524
+TravisBuild=
+Commit=
+TravisJob=
+Author=
+BuildTime=
+Docker=
